fix: remove horizontal scrollbar in modal header

--- a/src/styles/components/modal-premium-base.css
+++ b/src/styles/components/modal-premium-base.css
@@ -241,14 +241,13 @@
 
 .modal-premium__header--with-icon {
   padding-top: 24px;
-  padding-left: 70px;
-  padding-right: 70px;
+  position: relative;
 }
 
 .modal-premium__header--with-icon .modal-premium__icon {
   position: absolute;
   left: 20px;
-  top: 20px;
+  top: 24px;
   width: 48px;
   height: 48px;
   font-size: 24px;
